# partitionElection

./: .gitignore  Cargo.toml  Readme.md
logs/rankings/: 3_CS.txt  3_FCS.txt  3_FCW.txt  3_FP.txt  3_PA.txt  3_PS.txt  4_FCS.txt  4_FCW.txt  4_FP.txt
src/: lib.rs  main.rs
src/ballots/: ballot_trait.rs  cs.rs  fcs.rs  fcw.rs  fp.rs  mod.rs  new_axiom.rs  new_ballot.rs  pa.rs  ps.rs  utils.rs
src/cli/: mod.rs
src/cli/profile/: mod.rs  utils.rs
src/cli/proof/: mod.rs
src/cli/score/: mod.rs
src/proof/: mod.rs  proof.rs
src/proof/axiom/: consistency.rs  fullcoalitionsupport.rs  majority.rs  mod.rs  new_axiom.rs  nonimposition.rs  participation.rs  split.rs  strategyproof.rs  strongnonimposition.rs  strongpairsupport.rs  unanimity.rs  weakpairsupport.rs
src/proof/profile/: profile.rs
src/proof/rule/: borda.rs  copeland.rs  mod.rs  new_rule.rs  rule_trait.rs  scoring.rs
src/structures/: candidate.rs  coalition.rs  mod.rs  partition.rs  ranking.rs
src/structures/utils/: mod.rs  parsing.rs  to_string.rs
src/utils/: io.rs  mod.rs  structures.rs  unordered_pair.rs
tests/: ballots.rs  rankings.rs  rules.rs  utils.rs
