[package]
name = "partitionElection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
itertools = "0.14.0"
log = "0.4.25"
prettytable-rs = "0.10.0"
regex = "1.11.1"
simplelog = "0.12.2"
z3 = "0.12.1"
